[gd_scene load_steps=10 format=2]

[ext_resource path="res://screens/sign_in/registration.gd" type="Script" id=1]
[ext_resource path="res://screens/sign_in/SplashImage.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/sign_in/SettingsContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://screens/sign_in/EmailInput.tscn" type="PackedScene" id=4]
[ext_resource path="res://screens/sign_in/UsernameInput.tscn" type="PackedScene" id=5]
[ext_resource path="res://screens/sign_in/PasswordInput.tscn" type="PackedScene" id=6]
[ext_resource path="res://screens/sign_in/RegistrationButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/http/THRegistration.gd" type="Script" id=8]
[ext_resource path="res://ui/themes/title_font.tres" type="DynamicFont" id=9]

[node name="RegistrationScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="SplashImage" parent="." instance=ExtResource( 2 )]

[node name="RegistrationContainer" parent="." instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = -252.5
margin_right = 0.0
margin_bottom = 252.5

[node name="EmailInput" parent="RegistrationContainer" instance=ExtResource( 4 )]
margin_right = 480.0
margin_bottom = 150.0

[node name="UsernameInput" parent="RegistrationContainer" instance=ExtResource( 5 )]
margin_top = 154.0
margin_right = 480.0
margin_bottom = 304.0

[node name="PasswordInput" parent="RegistrationContainer" instance=ExtResource( 6 )]
margin_top = 308.0
margin_right = 480.0
margin_bottom = 458.0

[node name="RegistrationButtonHolder" parent="RegistrationContainer" instance=ExtResource( 7 )]
margin_top = 462.0
margin_right = 480.0
margin_bottom = 505.0

[node name="RegistrationRequest" type="HTTPRequest" parent="RegistrationContainer"]
script = ExtResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="RegistrationContainer"]
margin_left = 191.0
margin_top = 509.0
margin_right = 288.0
margin_bottom = 566.0
size_flags_horizontal = 4

[node name="LoginLink" type="LinkButton" parent="RegistrationContainer/HBoxContainer"]
margin_top = 50.0
margin_right = 97.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 9 )
text = "Login"
